--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         NDK_BIN="$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin"
         CC="$NDK_BIN/clang"
         STRIP="$NDK_BIN/llvm-strip"
-        FLAGS="--target=aarch64-linux-android21 -static -O3 -Wall -Wextra"
+        FLAGS="--target=aarch64-linux-android21 -fPIE -pie -O3 -Wall -Wextra"
         OUT="build/android-arm64"
 
         $CC $FLAGS -o $OUT/heap-test brk/heap-test.c
@@ -49,7 +49,7 @@ jobs:
         NDK_BIN="$ANDROID_NDK_ROOT/toolchains/llvm/prebuilt/linux-x86_64/bin"
         CC="$NDK_BIN/clang"
         STRIP="$NDK_BIN/llvm-strip"
-        FLAGS="--target=armv7a-linux-androideabi21 -static -O3 -Wall -Wextra"
+        FLAGS="--target=armv7a-linux-androideabi21 -fPIE -pie -O3 -Wall -Wextra"
         OUT="build/android-arm32"
 
         $CC $FLAGS -o $OUT/heap-test brk/heap-test.c
